# Project

./: .env.dev  .env.prod  .env.prod.db  .gitignore  README.md  docker-compose-swarm.yml  docker-compose.prod.yml  docker-compose.yml  sampleCMDS.txt
audit-logging/audit/: logXML.py
backend/audit/: logXML.py  logfile_schema.xsd
backend/src/: database.py  getLogs.py  mock_commands.py  n_web_servers.py  user_commands.py  web_server.py
database-imports/: README.md  accounts_account  frontEndStocks_frontendstock  prevPrices_prevprices  transactions_transaction
database/src/: database.py  db_log.py
django-env/Scripts/: activate  activate.bat  django-admin.py
django-project/: pyvenv.cfg
django-project/Scripts/: activate  activate.bat  django-admin.py
documentation/: ProjectDocumentation.md
fastAPI/: docker-compose.yml
fastAPI/backend/: backend.Dockerfile  mongo-init.js
fastAPI/backend/app/: entrypoint.sh  main.py  pyproject.toml
fastAPI/backend/app/app/: api.py
fastAPI/backend/app/core/: config.py
fastAPI/backend/app/db/: MongoManager.py  database_manager.py  models.py  mongo_manager.py
load_balancer/src/: load_balancer.py
nginx/: Dockerfile  metricsDockerfile  nginx.conf
prometheus/: prometheus.yml
stocksite/: Dockerfile  Dockerfile.prod  README.md  db.sql  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  mongo-init.js  requirements.dev.txt  requirements.txt
stocksite/accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
stocksite/data-db/: WiredTiger.turtle  WiredTiger.wt  (+34 more)
utils/: setup.sh
(+131 files in other folders)
