[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["DiannaBanana <borinaga33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.3.0"
fastapi = "^0.61.1"
uvicorn = {extras = ["standard"], version = "^0.12.1"}
gunicorn = "^20.0.4"
requests = "^2.23.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
